umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@cdk_bug1014344-1.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 33"
molecule_lenient:
  success: true
  summary:
    sum_formula: C17HO3
    atom_count: 21
    bond_count: 21
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 33"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C17HO3
    atom_count: 21
    bond_count: 21
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
