umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@cdk_chemblMolregno5369.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C2H3NO
    atom_count: 7
    bond_count: 6
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C2H3NO
    atom_count: 7
    bond_count: 6
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C2H3NO
    atom_count: 7
    bond_count: 6
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C2H3NO
    atom_count: 7
    bond_count: 6
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
